--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,6 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "./",
     "outDir": "./dist/out-tsc",
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -15,7 +14,10 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
@@ -25,44 +27,20 @@
       "dom"
     ],
     "paths": {
-      "@components/*": [
-        "src/app/components/*"
-      ],
       "@core/*": [
-        "src/app/core/*"
-      ],
-      "@auth/*": [
-        "src/app/auth/*"
+        "./src/app/core/*"
       ],
       "@shared/*": [
-        "src/app/shared/*"
-      ],
-      "@features/*": [
-        "src/app/features/*"
-      ],
-      "@layout/*": [
-        "src/app/layout/*"
-      ],
-      "@assets/*": [
-        "src/assets/*"
-      ],
-      "@environments/*": [
-        "src/environments/*"
-      ],
-      "@infrastructure/*": [
-        "src/app/shared/infrastructure/*"
-      ],
-      "@app/*": [
-        "src/app/*"
+        "./src/app/shared/*"
       ],
       "@pages/*": [
-        "src/app/pages/*"
+        "./src/app/pages/*"
       ],
-      "@stickers/*": [
-        "src/app/pages/stickers/*"
+      "@environments/*": [
+        "./src/environments/*"
       ],
-      "@article/*": [
-        "src/app/shared/pages/article/*"
+      "@assets/*": [
+        "./src/assets/*"
       ]
     }
   },
